--- a/css/styles.css
+++ b/css/styles.css
@@ -55,9 +55,15 @@ img {
 .list_item {
   margin-right: 20px;
   color: white;
+  font-size: 20px;
 }
 
 .list_item :active {
+  opacity: 0.9;
+  color: #306ef7;
+}
+
+.list_item :hover {
   opacity: 0.9;
   color: #306ef7;
 }
@@ -75,13 +81,26 @@ img {
   justify-content: space-between;
 }
 
-.down1 {
+.login {
   text-decoration: none;
   color: #707070;
   margin-right: 10px;
+  font-size: 20px;
 }
 
-.down2 {
+.login:active{
+  opacity: 0.9;
+ color:#306ef7;
+}
+
+.login:hover{
+  opacity: 0.9;
+ color:#306ef7;
+}
+
+
+
+.sign-up {
   background-color: #306ef7;
   text-decoration: none;
   border: 1px solid #306ef7;
@@ -89,6 +108,12 @@ img {
   border-radius: 10px;
   padding: 12px 20px;
 }
+
+.sign-up:active{
+  opacity: 0.9;
+  color: #0FC65C;
+}
+
 
 /* CTA */
 
@@ -205,7 +230,8 @@ img {
   color: #707070;
   font-size: 20px;
   margin-left: 4px;
-  margin: 0;
+  margin-bottom: 4px;
+
 }
 
 .offer-trust-band {
@@ -288,9 +314,6 @@ img {
 }
 
 
-/* .homepage-wrapper {
-} */
-
 .homepage-prg {
   top: 0;
   left: 0;
@@ -324,7 +347,6 @@ img {
   border-radius: 50px;
   background: #2d2d2d;
   text-align: center;
-  align-items: center;
   margin-right: 10px;
   font-size: 23px;
   font-weight: 900;
@@ -332,10 +354,7 @@ img {
 
 .number-text {
   width: 921px;
-  padding: 0;
   font-size: 23px;
-  margin-bottom: 20px;
-  margin-top: 0px;
 }
 
 
@@ -348,7 +367,9 @@ img {
   margin-right: 20px;
   padding: 20px 40px;
   text-decoration: none;
+  font-family: "Poppins", sans-serif;
 }
+
 .homelink-2 {
   border: 1px solid #707070;
   background-color: #000;
@@ -356,6 +377,7 @@ img {
   border-radius: 10px;
   text-decoration: none;
   padding: 20px 40px;
+  font-family: "Poppins", sans-serif;
 }
 
 
@@ -535,8 +557,25 @@ img {
 }
 
 .footer-logo {
+
   font-size: 30px;
+
 }
+
+.creator{
+  color: crimson;
+  text-decoration: none;
+}
+
+
+.creator:active{
+  color:#26c741;
+}
+
+.creator:hover{
+  color:#ffffff;
+}
+
 .footer-ul {
   display: flex;
   margin: 0;
