add footer responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,7 @@ img {
   overflow: clip;
 }
 
-@media screen and (max-width: 600px) {
-  div.example {
-    display: none;
-  }
-}
+
 
 *::focus {
   outline: 2px dashed #000;
@@ -569,6 +565,7 @@ img {
 
 
 .creator:active{
+  opacity: initial;
   color:#26c741;
 }
 
@@ -582,6 +579,7 @@ img {
   padding: 0;
   align-items: center;
   list-style: none;
+  margin-bottom: 60px;
 }
 .footer-li {
   margin-right: 20px;
@@ -606,6 +604,24 @@ img {
   margin-right: 20px;
 }
 
-.nav_link {
+@media screen and (max-width: 600px) {
+  .footer {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+  }
+.footer-ul{
+  margin: auto;
+ margin-right: 40px;
+}
 
+  .footer-li{
+    font-size: 15px;
+    margin: 0;
+
+  }
+
+  .creator{
+    font-size: 13px;
+  }
 }
